<resources>
    <string name="app_name">JavaAPK</string>
    <string name="title_activity_login_into_profile">LoginIntoProfileActivity</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="timetable">Timetable</string>
    <string name="events">Events</string>
    <string name="assessments">Assessments</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="about_app">About app</string>
    <string name="log_out">Log out</string>
    <string name="manage_groups">Manage Groups</string>
    <string name="loading">Loading…</string>
    <string name="unavailable">Unavailable</string>
    <string name="task_type_unknown">Unknown</string>
    <string name="task_type_none">None</string>
    <string name="task_type_not_recognized">Not Recognized</string>
    <string name="create_new_group">Create new group</string>
    <string name="user_name_unknown">Unknown</string>
    <string name="user_name_none">No one</string>
    <string name="name">Name</string>
    <string name="admin">Administrator</string>
    <string name="treasurer">Treasurer\n</string>
    <string name="member_count">Members</string>
    <string name="admin_options">Admin Options</string>
    <string name="change_group_admin">Change Admin</string>
    <string name="change_group_name">Change Name</string>
    <string name="change_group_treasurer">Change Treasurer</string>
    <string name="reroll_group_access_code">Reroll Access Code</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="kick_user">Kick</string>
    <string name="make_admin">Make Admin</string>
    <string name="make_treasurer">Make Treasurer</string>
    <string name="add_users">Add Users</string>
    <string name="access_code">Access Code</string>
    <string name="add_event">Add Event</string>
    <string name="task_type_task">Task</string>
    <string name="task_type_event">Event</string>
    <string name="task_type_payment">Payment</string>
    <string name="task_type_test">Test</string>
    <string name="task_type_homework">Homework</string>
    <string name="no_group"><![CDATA[<no group>]]></string>

    <string name="fab_description">Add new item</string>
    <string name="event_date_description">event_date_description</string>

    <string-array name="event_type_add">
        <item>none</item>
        <item>domaci ukol</item>
        <item>udalost</item>
        <item>oznameni</item>
        <item>platba</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>