<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/timetable"
            android:id="@+id/side_menu_item_timetable" />

    <item
            android:title="@string/events"
            android:id="@+id/side_menu_item_events" />

    <item
            android:title="@string/assessments"
            android:id="@+id/side_menu_item_assessments" />

    <item
            android:title="@string/manage_profiles"
            android:id="@+id/side_menu_item_manage_profiles" />

    <item
            android:title="@string/log_out"
            android:id="@+id/side_menu_item_log_out" />

    <item
            android:title="@string/manage_groups"
            android:id="@+id/side_menu_item_manage_groups" />

    <item
            android:title="@string/about_app"
            android:id="@+id/side_menu_item_about_app" />

</menu>