<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.menu.GroupAdminOptionsActivity">


    <TextView
            android:text="@string/admin_options"
            android:layout_width="217dp"
            android:layout_height="27dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.01999998"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:id="@+id/textView17" />

    <TextView
            android:layout_width="217dp"
            android:layout_height="27dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.01999998"
            android:id="@+id/text_view_group_name" />

    <Button
            android:text="@string/change_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_group_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_group_name"
            android:layout_marginTop="32dp" />

    <Button
            android:text="@string/change_group_treasurer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_group_treasurer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_change_group_name" />

    <Button
            android:text="@string/change_group_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_group_admin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_change_group_treasurer" />

    <Button
            android:text="@string/reroll_group_access_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_reroll_group_access_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_change_group_admin" />
</androidx.constraintlayout.widget.ConstraintLayout>